# WebCab

./: README.md  get_conf.py  install.sh  pyproject.toml
 .gitlab/issue_templates/: task.md
Doc/: eval_manage_acces.md  listing_functions.md  wireframe.epgz
web_cab/: 1_📥_upload.py  authentification.py  background.py  browser.py  connect.py  custom.py  email.py  init_bdd.py  my_email.py  notification.py  run.py  start_back.sh  start_front.sh  translate.py  translate_compile.sh  translate_extract.sh  update.py  upload.py
web_cab/extras/: keywords.csv
web_cab/msg/: msg.pot
web_cab/msg/en/LC_MESSAGES/: msg.mo  msg.po
web_cab/msg/fr/LC_MESSAGES/: msg.mo  msg.po  msg.po~
web_cab/pages/: 2_📤_download.py  3_🆘_help.py  4_🛂_profile.py  download.py  profile.py
